--- a/package.json
+++ b/package.json
@@ -4,22 +4,57 @@
   "author": "Lucid LLC",
   "main": "src/index.js",
   "scripts": {
-    "start:server": "node ./src/server/server.js",
+    "start:server": "node ./server/server.js",
     "start:client": "react-scripts start",
     "start": "concurrently npm:start:client npm:start:server",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "jest --passWithNoTests --no-cache"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "typescript": "^3.7.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
-    "@types/react": "^16.9.11",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/faker": "^5.5.8",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.10",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
     "concurrently": "^5.0.0",
-    "react-scripts": "^3.2.0"
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "faker": "^5.5.3",
+    "git-commit-msg-linter": "^3.2.8",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
+    "react-scripts": "^4.0.3",
+    "sass": "^1.41.1",
+    "ts-jest": "26.5.6",
+    "typescript": "^4.4.2"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint 'src/**' --fix",
+      "npm run test"
+    ]
   },
   "browserslist": {
     "production": [
