test: result page

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
+    "@testing-library/react": "^11.2.6",
     "@types/faker": "^5.5.8",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.10",
@@ -50,6 +50,7 @@
     "faker": "^5.5.3",
     "git-commit-msg-linter": "^3.2.8",
     "husky": "^7.0.2",
+    "jest-localstorage-mock": "^2.4.17",
     "lint-staged": "^11.1.2",
     "postcss": "^7.0.36",
     "react-scripts": "^4.0.3",
